fixed z-index

--- a/src/assets/slot-machine.css
+++ b/src/assets/slot-machine.css
@@ -5,6 +5,7 @@
 
 .slot-box {
   font-size: 3rem;
+  min-height: 4rem;
 }
 
 .slot-machine-result {
